# LeosMcAfkHelper

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  domain.rs  lib.rs  main.rs  store.rs
src-tauri/src/mcc/: config.rs  devicecode.rs  mod.rs  paths.rs  process.rs  scriptgen.rs
src/lib/: api.ts  mccTemplates.ts
src/lib/components/: CodeEditor.svelte  Console.svelte  DeviceCodePrompt.svelte  PlayerEditor.svelte  PlayerList.svelte
src/lib/stores/: players.ts
