[package]
name = "leos-mcafk-helper"
version = "0.1.0"
description = "Leo's Minecraft AFK Helper - manage MCC fake players"
authors = ["Leo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "leos_mcafk_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "fs", "sync", "macros", "rt-multi-thread", "time"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
dashmap = "6"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified.
custom-protocol = ["tauri/custom-protocol"]
